# stream-httparse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
benches/: benchmark.rs
benches/requests/: mod.rs
benches/responses/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_chunk_parser.rs  fuzz_req_parser.rs  fuzz_resp_parser.rs
src/: chunk.rs  general.rs  header.rs  headers.rs  lib.rs  method.rs  request.rs  response.rs  status_code.rs
src/header/: key.rs  value.rs
src/streaming_parser/: chunk_parser.rs  error.rs  req_parser.rs  resp_parser.rs
