[package]
name = "stream-httparse"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caseless = { version = "0.2.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "./benches/benchmark.rs"
