[package]
name = "stream-httparse"
description = "A fast streaming HTTP-Parser"
version = "0.1.3"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["http", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasm_serialize"]
wasm_serialize = []

[dependencies]
caseless = { version = "0.2.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "./benches/benchmark.rs"
